Setting up the above main nav-bar navigation

--- a/index.html
+++ b/index.html
@@ -18,9 +18,20 @@
 
 <body>
   <header>
-    <div class="container">
-      <div class="row">
-        
+    <div class="container-fluid">
+      <div class="row default-bg-color">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="row">
+                <div class="col-sm-4 py-3 bg-success"></div>
+                <div class="col-sm-4 py-3 bg-info"></div>
+                <div class="col-sm-4 py-3 bg-dark"></div>
+              </div>
+            </div>
+            <div class="col-md-4 py-3 bg-secondary"></div>
+          </div>
+        </div>
       </div>
     </div>
   </header>
