Done with the left section

--- a/index.html
+++ b/index.html
@@ -24,9 +24,21 @@
           <div class="row">
             <div class="col-md-8">
               <div class="row">
-                <div class="col-sm-4 py-3 bg-success"></div>
-                <div class="col-sm-4 py-3 bg-info"></div>
-                <div class="col-sm-4 py-3 bg-dark"></div>
+                <div class="col-sm-4 py-1">
+                  <p class="text-white small pt-2">
+                    <i class="fa fa-map-marker"></i> &nbsp; 40 Baria Street, Bauchi City, Nigeria
+                  </p>
+                </div>
+                <div class="col-sm-4 py-1">
+                  <p class="text-white small pt-2">
+                    <i class="fa fa-envelope"></i> &nbsp; supportinfo@devcbauchi.fb.com
+                  </p>
+                </div>
+                <div class="col-sm-4 py-1">
+                  <p class="text-white small pt-2">
+                    <i class="fa fa-phone"></i> &nbsp; 07031552163
+                  </p>
+                </div>
               </div>
             </div>
             <div class="col-md-4 py-3 bg-secondary"></div>
