Done with the mini header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="row default-bg-color">
         <div class="container">
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 text-center">
               <div class="row">
                 <div class="col-sm-4 py-1">
                   <p class="text-white small pt-2">
@@ -35,13 +35,29 @@
                   </p>
                 </div>
                 <div class="col-sm-4 py-1">
-                  <p class="text-white small pt-2">
+                  <p class="text-white small pt-2 text-left">
                     <i class="fa fa-phone"></i> &nbsp; 07031552163
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-md-4 py-3 bg-secondary"></div>
+            <div class="col-md-4">
+              <div class="row">
+                <div class="col-sm-4 pt-3">
+                  <p class="small text-white">English Uk</p>
+                </div>
+                <div class="col-sm-8 text-white small">
+                  <div class="row">
+                    <div class="col-sm-10 pt-1">
+                      <i class="fa fa-facebook mr-2"></i>
+                      <i class="fa fa-twitter mr-2"></i>
+                      <i class="fa fa-google-plus"></i>
+                      <small><a href="#!" class="btn picky-button btn-sm px-3">GET A QOUTE</a></small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
