Main navbar setted up

--- a/index.html
+++ b/index.html
@@ -18,50 +18,108 @@
 
 <body>
   <header>
-    <div class="container-fluid">
-      <div class="row default-bg-color">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 text-center">
-              <div class="row">
-                <div class="col-sm-4 py-1">
-                  <p class="text-white small pt-2">
-                    <i class="fa fa-map-marker"></i> &nbsp; 40 Baria Street, Bauchi City, Nigeria
-                  </p>
-                </div>
-                <div class="col-sm-4 py-1">
-                  <p class="text-white small pt-2">
-                    <i class="fa fa-envelope"></i> &nbsp; supportinfo@devcbauchi.fb.com
-                  </p>
-                </div>
-                <div class="col-sm-4 py-1">
-                  <p class="text-white small pt-2 text-left">
-                    <i class="fa fa-phone"></i> &nbsp; 07031552163
-                  </p>
-                </div>
+    <!-- Mini Navigation bar -->
+    <div class="container-fluid default-bg-color">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 text-center">
+            <div class="row">
+              <div class="col-sm-4 py-1">
+                <p class="text-white small pt-2">
+                  <i class="fa fa-map-marker"></i> &nbsp; 40 Baria Street, Bauchi City, Nigeria
+                </p>
+              </div>
+              <div class="col-sm-4 py-1">
+                <p class="text-white small pt-2">
+                  <i class="fa fa-envelope"></i> &nbsp; supportinfo@devcbauchi.fb.com
+                </p>
+              </div>
+              <div class="col-sm-4 py-1">
+                <p class="text-white small pt-2 text-left">
+                  <i class="fa fa-phone"></i> &nbsp; 07031552163
+                </p>
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="row">
-                <div class="col-sm-4 pt-3">
-                  <p class="small text-white">English Uk</p>
-                </div>
-                <div class="col-sm-8 text-white small">
-                  <div class="row">
-                    <div class="col-sm-10 pt-1">
-                      <i class="fa fa-facebook mr-2"></i>
-                      <i class="fa fa-twitter mr-2"></i>
-                      <i class="fa fa-google-plus"></i>
-                      <small><a href="#!" class="btn picky-button btn-sm px-3">GET A QOUTE</a></small>
-                    </div>
+          </div>
+          <div class="col-md-4">
+            <div class="row">
+              <div class="col-sm-4 pt-3">
+                <p class="small text-white">English Uk</p>
+              </div>
+              <div class="col-sm-8 text-white small">
+                <div class="row">
+                  <div class="col-sm-10 pt-1">
+                    <i class="fa fa-facebook mr-2"></i>
+                    <i class="fa fa-twitter mr-2"></i>
+                    <i class="fa fa-google-plus"></i>
+                    <small><a href="#!" class="btn picky-button btn-sm px-3">GET A QOUTE</a></small>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        </div>
       </div>
     </div>
+    <!-- Mini Navigation bar -->
+
+    <!-- Main Navigation bar -->
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar">
+      <div class="container">
+        
+        <!-- Navbar brand -->
+        <a class="navbar-brand tick-blue-text title2 font-weight-bold" href="#">Consuloan</a>
+
+        <!-- Collapse button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+          aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Collapsible content -->
+        <div class="collapse navbar-collapse mr-5" id="basicExampleNav">
+
+          <!-- Links -->
+          <ul class="navbar-nav ml-auto text-capitalize">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ABout us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pages</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">News</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+          <!-- Links -->
+
+          <!-- <form class="form-inline">
+            <div class="md-form my-0">
+              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            </div>
+          </form> -->
+        </div>
+        <!-- Collapsible content -->
+      </div>
+    </nav>
+    <!--/.Navbar-->
+    <!-- Main Navigation bar -->
   </header>
   <section>
     <main>
