--- a/index.html
+++ b/index.html
@@ -14,6 +14,37 @@
   <link href="css/mdb.min.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
   <link href="css/style.css" rel="stylesheet">
+  <style type="text/css">
+    html,
+    body,
+    header,
+    .view {
+      height: 90%;
+    }
+
+    @media (max-width: 740px) {
+      html,
+      body,
+      header,
+      .view {
+        height: 1000px;
+      }
+    }
+
+    @media (min-width: 800px) and (max-width: 850px) {
+      html,
+      body,
+      header,
+      .view {
+        height: 650px;
+      }
+    }
+    @media (min-width: 800px) and (max-width: 850px) {
+              .navbar:not(.top-nav-collapse) {
+                  background: #1C2331!important;
+              }
+          }
+  </style>
 </head>
 
 <body>
@@ -126,11 +157,12 @@
         <div class="mask rgba-pink-slight flex-center">
           <div class="container black-text wow fadeInUp">
             <div class="col-md-8">
-              <h1 class="font-weight-bold title1">Modern online and offline payments for Africa</h1>
+              <h1 class="font-weight-bold tick-blue-text text-uppercase">Save <span class="picky-text">time</span></h1>
+              <h1 class="font-weight-bold tick-blue-text text-uppercase">Save <span class="picky-text">Money</span></h1>
+              <h1 class="font-weight-bold  text-uppercase"><span class="picky-text">Grow &amp; Success</span></h1>
               <br>
-              <h6>GladePay helps businesses in Africa get paid by anyone, anywhere in the world</h6>
-              <a href="">
-                <button type="button" class="btn rgba-pink-strong">Create a free account</button>
+                <button type="button" class="btn mr-3 rounded-0 picky-button">Our Company</button>
+                <button type="button" class="btn rounded-0 default-bg-color">Our Services</button>
               </a>
             </div>  
           </div>
@@ -138,6 +170,201 @@
       </div>
     </div>
   </header>
+  <section>
+    <main>
+      <footer class="page-footer font-small" style="background: url('img/banners/bggggg.png')no-repeat center center; background-size: cover;">
+          <div class="full-bg-img">
+            <div class="mask secondary-color section-padding2 text-dark">
+              <!-- footer links -->
+              <div class="container text-center text-md-left">
+                <!-- Grid row -->
+                <div class="row wow fadeInUp">
+                  <!-- Grid column -->
+                  <div class="col-md-3 mx-auto">
+                    <!-- links -->
+                    <h5 class="font-weight-bold mt-0 mb-2">Why GladePay</h5>
+                    <ul class="list-unstyled">
+                      <li>
+                        <a href="#!" class="footer-text">Why Choose GladePay</a>
+                      </li>
+                      <li>
+                        <a href="#!" class="footer-text">Success rates</a>
+                      </li> 
+                      <p>
+                        <li>
+                          <a href="#!" class="footer-text">For Entrepreneurs</a>
+                        </li>
+                        <li>
+                          <a href="#!" class="footer-text">For Corporates</a>
+                        </li>
+                        <li>
+                          <a href="#!" class="footer-text">For International Companies</a>
+                        </li>
+                      </p>
+                      <p>
+                        <li>
+                          <a href="#!" class="footer-text">For Fintechs</a>
+                        </li>
+                        <li>
+                          <a href="#!" class="footer-text">For Schools</a>
+                        </li>
+                        <li>
+                          <a href="#!" class="footer-text">For Betting</a>
+                        </li>
+                      </p>  
+                    </ul>
+                  </div>
+
+                  <!-- Grid column -->
+                  <hr class="clearfix w-100 d-md-none">
+                  
+                  <!-- Grid column -->
+                  <!-- links -->
+                  <div class="col-md-3 mx-auto">
+                    <!-- Links -->
+                    <h5 class="font-weight-bold mt-0 mb-2">Pricing</h5>
+                    <ul class="list-unstyled">
+                      <li>
+                      <a href="#!" class="footer-text">Nigeria</a>
+                      </li>
+                      <h5 class="font-weight-bold mt-4 mb-2">Customers</h5>
+                      <li>
+                        <a href="#!" class="footer-text">Testimonials</a>
+                      </li>
+                      <h5 class="font-weight-bold mt-4 mb-2">Learn</h5>
+                      <li>
+                        <a href="#!" class="footer-text">Blog</a>
+                      </li>
+                      <li>
+                        <a href="#!" class="footer-text">Guides</a>
+                      </li>
+                    </ul>
+                  </div>
+
+                  <!-- Grid column -->
+
+                  <hr class="clearfix w-100 d-md-none">
+                  <!-- Grid column -->
+                  <div class="col-md-3 mx-auto">
+                    <!-- Links -->
+                    <h5 class="font-weight-bold mt-0 mb-2">Overview</h5>
+                    <ul class="list-unstyled">
+                      <li>
+                        <a href="#!" class="footer-text">Overview</a>
+                      </li>
+                      <li>
+                        <a href="#!" class="footer-text">Documentation</a>
+                      </li>
+                      <li>
+                        <a href="#!" class="footer-text">Status Page</a>
+                      </li>
+                      <li>
+                      <h5 class="font-weight-bold mt-4 mb-2">Support</h5>
+                        <a href="#!" class="footer-text">Help Desk</a>
+                      </li>
+                      <li>
+                        <a href="#!" class="footer-text">Contact Us</a>
+                      </li>
+                    </ul>
+                  </div>
+
+                  <hr class="clearfix w-100 d-md-none">
+                  <!-- Grid column -->
+                  <div class="col-md-3 mx-auto">
+                    <!-- Links -->
+                    <h5 class="font-weight-bold mt-0 mb-2">About</h5>
+
+                    <ul class="list-unstyled">
+                      <li>
+                        <a href="#!" class="footer-text">Company</a>
+                      </li>
+                      <li>
+                        <a href="#!" class="footer-text">Careers</a>
+                      </li>
+                      <li>
+                        <a href="#!" class="footer-text">Media Kit</a>
+                      </li>
+                      <li>
+                        <a href="#!" class="footer-text">Privacy &amp; Terms</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- Grid row -->
+                <hr class="w-100 my-5">
+                <!-- Grid row -->
+                <div class="row mb-4 wow fadeInLeft">
+                  <!-- Grid column -->
+                  <div class="col-md-3 mx-auto">
+                    <!-- links -->
+                    <h5 class="font-weight-bold mt-0 mb-2">Contact</h5>
+                    <ul class="list-unstyled">
+                      <li class="mb-2">
+                        <a href="mailto:hello@paystack.com" class="footer-text">hello@paystack.com</a>
+                      </li>
+                      <li>
+                        <a href="#!" class="footer-text">Request a phone call</a>
+                      </li> 
+                    </ul>
+                  </div>
+
+                  <!-- Grid column -->
+                  <hr class="clearfix w-100 d-md-none">
+                  
+                  <!-- Grid column -->
+                  <!-- links -->
+                  <div class="col-md-3 mx-auto">
+                    <!-- Links -->
+                    <h5 class="font-weight-bold mt-0 mb-2">Lagos</h5>
+                    <p>
+                      3A, Ladoke Akintola Road,
+                      Ikeja GRA, Ikeja, Lagos, Nigeria
+                    </p>
+                  </div>
+
+                  <!-- Grid column -->
+
+                  <hr class="clearfix w-100 d-md-none">
+                  <!-- Grid column -->
+                  <div class="col-md-3 mx-auto">
+                    <!-- Links -->
+                    <h5 class="font-weight-bold mt-0 mb-2">San Francisco</h5>
+                    <p>
+                      201 Spear Street, Suite 1100,
+                      PMB 3228, San Francisco, CA.
+                    </p>
+                  </div>
+
+                  <hr class="clearfix w-100 d-md-none">
+                  <!-- Grid column -->
+                  <div class="col-md-3 mx-auto">
+                    <!-- Links -->
+                    <h5 class="font-weight-bold mt-0 mb-2">Social</h5>
+                    <a href="#!" class="">
+                      <i class="fa fa-facebook-square text-dark fa-2x mr-2 hoverable"></i>
+                    </a>
+                    <a href="#!" class="">
+                      <i class="fa fa-twitter-square text-dark fa-2x mr-2 hoverable"></i>
+                    </a>
+                    <a href="#!" class="">
+                      <i class="fa fa-instagram text-dark fa-2x mr-2 hoverable"></i>
+                    </a>
+                    <a href="#!" class="">
+                      <i class="fa fa-linkedin-square text-dark fa-2x mr-2 hoverable"></i>
+                    </a>
+                    <a href="#!" class="">
+                      <i class="fa fa-youtube-square text-dark fa-2x hoverable"></i>
+                    </a>
+                  </div>
+                </div>
+                <!-- Grid row -->
+              </div>
+              <!-- footer links -->
+            </div>
+          </div>
+      </footer>
+    </main>
+  </section>
 
   <!-- SCRIPTS -->
   <!-- JQuery -->
