--- a/index.html
+++ b/index.html
@@ -15,31 +15,35 @@
   <!-- Your custom styles (optional) -->
   <link href="css/style.css" rel="stylesheet">
   <style type="text/css">
-    html,
-    body,
-    header,
-    .view {
-      height: 90%;
-    }
-
-    @media (max-width: 740px) {
-      html,
+   html,
       body,
       header,
       .view {
-        height: 1000px;
+        height: 75vh;
+        margin-bottom: 16vh;
       }
-    }
 
-    @media (min-width: 800px) and (max-width: 850px) {
-      html,
-      body,
-      header,
-      .view {
-        height: 650px;
+      @media (max-width: 740px) {
+        html,
+        body,
+        header,
+        .view {
+          height: 100vh;
+          margin-bottom: 16vh;
+        }
       }
-    }
-    @media (min-width: 800px) and (max-width: 850px) {
+
+      @media (min-width: 800px) and (max-width: 850px) {
+        html,
+        body,
+        header,
+        .view {
+          height: 100vh;
+          margin-bottom: 16vh;
+        }
+      }
+
+      @media (min-width: 800px) and (max-width: 850px) {
               .navbar:not(.top-nav-collapse) {
                   background: #1C2331!important;
               }
@@ -57,17 +61,17 @@
             <div class="row">
               <div class="col-sm-4 py-1">
                 <p class="text-white small pt-2">
-                  <i class="fa fa-map-marker"></i> &nbsp; 40 Baria Street, Bauchi City, Nigeria
+                  <i class="fa picky-text fa-map-marker"></i> &nbsp; 40 Baria Street, Bauchi City, Nigeria
                 </p>
               </div>
               <div class="col-sm-4 py-1">
                 <p class="text-white small pt-2">
-                  <i class="fa fa-envelope"></i> &nbsp; supportinfo@devcbauchi.fb.com
+                  <i class="fa picky-text fa-envelope"></i> &nbsp; supportinfo@devcbauchi.fb.com
                 </p>
               </div>
               <div class="col-sm-4 py-1">
                 <p class="text-white small pt-2 text-left">
-                  <i class="fa fa-phone"></i> &nbsp; 07031552163
+                  <i class="fa picky-text fa-phone"></i> &nbsp; 07031552163
                 </p>
               </div>
             </div>
@@ -79,7 +83,7 @@
               </div>
               <div class="col-sm-8 text-white small">
                 <div class="row">
-                  <div class="col-sm-10 pt-1">
+                  <div class="col-sm-10 pt-1 ">
                     <i class="fa fa-facebook mr-2"></i>
                     <i class="fa fa-twitter mr-2"></i>
                     <i class="fa fa-google-plus"></i>
@@ -120,7 +124,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ABout us</a>
+              <a class="nav-link" href="#">About us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">services</a>
@@ -151,8 +155,7 @@
     </nav>
     <!--/.Navbar-->
     <!-- Main Navigation bar -->
-    <div class="view intro-2" style="background: url('images/1-3.jpg')no-repeat center center;
-    background-size: cover;">
+    <div class="view intro-2" style="background: url('images/1-3.jpg')no-repeat center center; background-size: cover;">
       <div class="full-bg-img">
         <div class="mask rgba-pink-slight flex-center">
           <div class="container black-text wow fadeInUp">
@@ -170,6 +173,20 @@
       </div>
     </div>
   </header>
+  <section class="demo-section py-5">
+    <div class="container py-3">
+      <div class="row">
+        <div class="col-md-5">
+          <div class="embed-responsive embed-responsive-16by9 z-depth-3 hoverable">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vlDzYIIOYmM" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col-md-7">
+          <h3 class="font-weight-bold h2-responsive tick-blue-text text-capitalize"><span class="picky-text">30 years</span> of successful bussiness consulting</h3>
+        </div>
+      </div>
+    </div>
+  </section>
   <section>
     <main>
       <footer class="page-footer font-small" style="background: url('img/banners/bggggg.png')no-repeat center center; background-size: cover;">
