Intro section all set and done

--- a/index.html
+++ b/index.html
@@ -175,14 +175,21 @@
   </header>
   <section class="demo-section py-5">
     <div class="container py-3">
-      <div class="row">
-        <div class="col-md-5">
-          <div class="embed-responsive embed-responsive-16by9 z-depth-3 hoverable">
+      <div class="row py-2 ">
+        <div class="col-md-5 wow slideInUp">
+          <div class="embed-responsive embed-responsive-16by9 z-depth-3">
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vlDzYIIOYmM" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="col-md-7">
-          <h3 class="font-weight-bold h2-responsive tick-blue-text text-capitalize"><span class="picky-text">30 years</span> of successful bussiness consulting</h3>
+        <div class="col-md-7 wow slideInUp slower">
+          <h3 class="font-weight-bold my-0 h2-responsive tick-blue-text text-capitalize"><span class="picky-text">30 years</span> of successful bussiness consulting</h3>
+          <p class="tick-blue-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ipsum voluptas amet ipsa, fuga sint. Excepturi id inventore qui, explicabo quod rerum dolor voluptates quasi!
+          </p>
+          <p class="tick-blue-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita asperiores ullam repellat, eveniet libero eius illo molestiae ab nulla veniam at corrupti, quod obcaecati reiciendis .
+          </p>
+          <a href="#!" class="btn picky-button text-uppercase rounded-0">Read more</a>
         </div>
       </div>
     </div>
