--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <!-- Main Navigation bar -->
     <div class="view intro-2" style="background: url('images/1-3.jpg')no-repeat center center; background-size: cover;">
       <div class="full-bg-img">
-        <div class="mask rgba-pink-slight flex-center">
+        <div class="mask rgba-indigo-slight flex-center">
           <div class="container black-text wow fadeInUp">
             <div class="col-md-8">
               <h1 class="font-weight-bold tick-blue-text text-uppercase">Save <span class="picky-text">time</span></h1>
@@ -173,27 +173,37 @@
       </div>
     </div>
   </header>
-  <section class="demo-section py-5">
-    <div class="container py-3">
-      <div class="row py-2 ">
-        <div class="col-md-5 wow slideInUp">
-          <div class="embed-responsive embed-responsive-16by9 z-depth-3">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vlDzYIIOYmM" allowfullscreen></iframe>
+  <main>
+    <section class="demo-section py-5">
+      <div class="container py-3">
+        <div class="row py-2 ">
+          <div class="col-md-5 wow slideInUp">
+            <div class="embed-responsive embed-responsive-16by9 z-depth-3">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vlDzYIIOYmM" allowfullscreen></iframe>
+            </div>
+          </div>
+          <div class="col-md-7 wow slideInUp slower">
+            <h3 class="font-weight-bold my-0 h2-responsive tick-blue-text text-capitalize"><span class="picky-text">30 years</span> of successful bussiness consulting</h3>
+            <p class="tick-blue-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ipsum voluptas amet ipsa, fuga sint. Excepturi id inventore qui, explicabo quod rerum dolor voluptates quasi!
+            </p>
+            <p class="tick-blue-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita asperiores ullam repellat, eveniet libero eius illo molestiae ab nulla veniam at corrupti, quod obcaecati reiciendis .
+            </p>
+            <button type="button" class="btn btn-rounded-0 picky-button text-uppercase">Read more</button>
           </div>
         </div>
-        <div class="col-md-7 wow slideInUp slower">
-          <h3 class="font-weight-bold my-0 h2-responsive tick-blue-text text-capitalize"><span class="picky-text">30 years</span> of successful bussiness consulting</h3>
-          <p class="tick-blue-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ipsum voluptas amet ipsa, fuga sint. Excepturi id inventore qui, explicabo quod rerum dolor voluptates quasi!
-          </p>
-          <p class="tick-blue-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita asperiores ullam repellat, eveniet libero eius illo molestiae ab nulla veniam at corrupti, quod obcaecati reiciendis .
-          </p>
-          <a href="#!" class="btn picky-button text-uppercase rounded-0">Read more</a>
+      </div>
+    </section>
+
+    <section class="industry-section py-5">
+      <div class="container">
+        <div class="row text-center">
+          
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
   <section>
     <main>
       <footer class="page-footer font-small" style="background: url('img/banners/bggggg.png')no-repeat center center; background-size: cover;">
