Structure for industry Industry section all set and done

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         body,
         header,
         .view {
-          height: 100vh;
-          margin-bottom: 16vh;
+          height: 73vh;
+          margin-bottom: 38vh;
         }
       }
 
@@ -38,8 +38,8 @@
         body,
         header,
         .view {
-          height: 100vh;
-          margin-bottom: 16vh;
+          height: 73vh;
+          margin-bottom: 15vh;
         }
       }
 
@@ -177,12 +177,12 @@
     <section class="demo-section py-5">
       <div class="container py-3">
         <div class="row py-2 ">
-          <div class="col-md-5 wow slideInUp">
+          <div class="col-md-5 wow slideInUp mb-4">
             <div class="embed-responsive embed-responsive-16by9 z-depth-3">
               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vlDzYIIOYmM" allowfullscreen></iframe>
             </div>
           </div>
-          <div class="col-md-7 wow slideInUp slower">
+          <div class="col-md-7 wow slideInUp slower mb-3">
             <h3 class="font-weight-bold my-0 h2-responsive tick-blue-text text-capitalize"><span class="picky-text">30 years</span> of successful bussiness consulting</h3>
             <p class="tick-blue-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ipsum voluptas amet ipsa, fuga sint. Excepturi id inventore qui, explicabo quod rerum dolor voluptates quasi!
@@ -198,8 +198,13 @@
 
     <section class="industry-section py-5">
       <div class="container">
-        <div class="row text-center">
-          
+        <div class="row">
+          <div class="col-md-12"><h2 class="text-center text-white font-weight-bold">Our Industry</h2></div>
+          <div class="mx-auto mb-5 pt-2 picky-border d-block"></div>
+          <div class="w-100 d-block"></div>
+          <div class="col-md-4 py-4 mdb-color"></div>
+          <div class="col-md-4 py-4 bg-success"></div>
+          <div class="col-md-4 py-4 bg-danger"></div>
         </div>
       </div>
     </section>
