SFirst contaner of theIndustry section done

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
             <div class="row">
               <div class="col-sm-4 py-1">
                 <p class="text-white small pt-2">
-                  <i class="fa picky-text fa-map-marker"></i> &nbsp; 40 Baria Street, Bauchi City, Nigeria
+                  <i class="fa pinky-text fa-map-marker"></i> &nbsp; 40 Baria Street, Bauchi City, Nigeria
                 </p>
               </div>
               <div class="col-sm-4 py-1">
                 <p class="text-white small pt-2">
-                  <i class="fa picky-text fa-envelope"></i> &nbsp; supportinfo@devcbauchi.fb.com
+                  <i class="fa pinky-text fa-envelope"></i> &nbsp; supportinfo@devcbauchi.fb.com
                 </p>
               </div>
               <div class="col-sm-4 py-1">
                 <p class="text-white small pt-2 text-left">
-                  <i class="fa picky-text fa-phone"></i> &nbsp; 07031552163
+                  <i class="fa pinky-text fa-phone"></i> &nbsp; 07031552163
                 </p>
               </div>
             </div>
@@ -87,7 +87,7 @@
                     <i class="fa fa-facebook mr-2"></i>
                     <i class="fa fa-twitter mr-2"></i>
                     <i class="fa fa-google-plus"></i>
-                    <small><a href="#!" class="btn picky-button btn-sm px-3">GET A QOUTE</a></small>
+                    <small><a href="#!" class="btn pinky-button btn-sm px-3">GET A QOUTE</a></small>
                   </div>
                 </div>
               </div>
@@ -160,11 +160,11 @@
         <div class="mask rgba-indigo-slight flex-center">
           <div class="container black-text wow fadeInUp">
             <div class="col-md-8">
-              <h1 class="font-weight-bold tick-blue-text text-uppercase">Save <span class="picky-text">time</span></h1>
-              <h1 class="font-weight-bold tick-blue-text text-uppercase">Save <span class="picky-text">Money</span></h1>
-              <h1 class="font-weight-bold  text-uppercase"><span class="picky-text">Grow &amp; Success</span></h1>
+              <h1 class="font-weight-bold tick-blue-text text-uppercase">Save <span class="pinky-text">time</span></h1>
+              <h1 class="font-weight-bold tick-blue-text text-uppercase">Save <span class="pinky-text">Money</span></h1>
+              <h1 class="font-weight-bold  text-uppercase"><span class="pinky-text">Grow &amp; Success</span></h1>
               <br>
-                <button type="button" class="btn mr-3 rounded-0 picky-button">Our Company</button>
+                <button type="button" class="btn mr-3 rounded-0 pinky-button">Our Company</button>
                 <button type="button" class="btn rounded-0 default-bg-color">Our Services</button>
               </a>
             </div>  
@@ -183,14 +183,14 @@
             </div>
           </div>
           <div class="col-md-7 wow slideInUp slower mb-3">
-            <h3 class="font-weight-bold my-0 h2-responsive tick-blue-text text-capitalize"><span class="picky-text">30 years</span> of successful bussiness consulting</h3>
+            <h3 class="font-weight-bold my-0 h2-responsive tick-blue-text text-capitalize"><span class="pinky-text">30 years</span> of successful bussiness consulting</h3>
             <p class="tick-blue-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil ipsum voluptas amet ipsa, fuga sint. Excepturi id inventore qui, explicabo quod rerum dolor voluptates quasi!
             </p>
             <p class="tick-blue-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita asperiores ullam repellat, eveniet libero eius illo molestiae ab nulla veniam at corrupti, quod obcaecati reiciendis .
             </p>
-            <button type="button" class="btn btn-rounded-0 picky-button text-uppercase">Read more</button>
+            <button type="button" class="btn btn-rounded-0 pinky-button text-uppercase">Read more</button>
           </div>
         </div>
       </div>
@@ -200,11 +200,21 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12"><h2 class="text-center text-white font-weight-bold">Our Industry</h2></div>
-          <div class="mx-auto mb-5 pt-2 picky-border d-block"></div>
+          <div class="mx-auto mb-5 pt-2 pinky-border d-block"></div>
           <div class="w-100 d-block"></div>
-          <div class="col-md-4 py-4 mdb-color"></div>
-          <div class="col-md-4 py-4 bg-success"></div>
-          <div class="col-md-4 py-4 bg-danger"></div>
+          
+          <div class="col-md-4 py-4 bg-white">
+            <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
+              <i class="material-icons material-icons-md-36 font-weight-bold">business</i>
+            </div>
+
+            <div class="row mx-auto d-flex justify-content-center">
+              <h6 class="h6reponsive font-weight-bold tick-blue-text">Property Management</h6>
+              <p class="tick-blue-text text-center">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora hic suscipit illum maxime voluptatum facilis.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
