Second part of the industry section all done

--- a/index.html
+++ b/index.html
@@ -215,6 +215,19 @@
               </p>
             </div>
           </div>
+
+          <div class="col-md-4 py-4 default-bg-color">
+            <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
+              <i class="material-icons material-icons-md-36 font-weight-bold">search</i>
+            </div>
+
+            <div class="row mx-auto d-flex justify-content-center">
+              <h6 class="h6reponsive font-weight-bold text-white">Strategic Planning</h6>
+              <p class="text-white text-center">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora hic suscipit illum maxime voluptatum facilis.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
