Industry section finally out

--- a/index.html
+++ b/index.html
@@ -228,6 +228,19 @@
               </p>
             </div>
           </div>
+
+          <div class="col-md-4 py-4 bg-white">
+            <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
+              <i class="material-icons material-icons-md-36 font-weight-bold">pie_chart</i>
+            </div>
+
+            <div class="row mx-auto d-flex justify-content-center">
+              <h6 class="h6reponsive font-weight-bold tick-blue-text">Investment Planning</h6>
+              <p class="tick-blue-text text-center">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora hic suscipit illum maxime voluptatum facilis.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
