Testimonial section coming soon

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <div class="col-md-12"><h2 class="text-center text-white font-weight-bold">Our Industry</h2></div>
           <div class="mx-auto mb-5 pt-2 pinky-border d-block"></div>
           <div class="w-100 d-block"></div>
-          
+
           <div class="col-md-4 py-4 bg-white">
             <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
               <i class="material-icons material-icons-md-36 font-weight-bold">business</i>
@@ -243,6 +243,10 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="testimonail-section py-5">
+     <i class="fa fa-quote-left fa-4x"></i>
     </section>
   </main>
   <section>
