--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <div class="mx-auto mb-5 pt-2 pinky-border d-block"></div>
           <div class="w-100 d-block"></div>
 
-          <div class="col-md-4 py-4 bg-white">
+          <div class="col-md-4 py-4 bg-white mb-lg-0 mb-md-0">
             <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
               <i class="material-icons material-icons-md-36 font-weight-bold">business</i>
             </div>
@@ -216,7 +216,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 py-4 default-bg-color">
+          <div class="col-md-4 py-4 default-bg-color mb-lg-0 mb-md-0">
             <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
               <i class="material-icons material-icons-md-36 font-weight-bold">search</i>
             </div>
@@ -229,7 +229,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 py-4 bg-white">
+          <div class="col-md-4 py-4 bg-white mb-lg-0 mb-md-0 mb-sm-4">
             <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
               <i class="material-icons material-icons-md-36 font-weight-bold">pie_chart</i>
             </div>
@@ -246,7 +246,32 @@
     </section>
 
     <section class="testimonail-section py-5">
-     <i class="fa fa-quote-left fa-4x"></i>
+      <div class="container">
+        <div class="row">
+          <div class="mx-auto col-md-8 py-2 text-center">
+            <i class="fa fa-quote-left fa-3x pinky-text"></i>
+          </div>
+          <div class="w-100"></div>
+          <div class="mx-auto col-md-8 text-center">
+            <h3 class="h3-responsive tick-blue-text font-weight-bold">2000<sup>+</sup> Happy Clients</h3>
+            <p class="testimonail">
+              "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto nihil iste, ad officiis! Modi accusamus voluptatibus aperiam dolores nam pariatur nulla sint atque ullam illo voluptatum nemo, repellendus perferendis tempora ipsum iure harum perspiciatis id quaerat? Exercitationem itaque facere harum libero deleniti distinctio consequuntur molestiae necessitatibus, animi quidem blanditiis sequi labore accusamus magnam facilis consequatur"
+            </p>
+            <div class="avatar mx-auto">
+              <img src="images/28166585_1821180634600940_1020049624458377498_n.jpg" class="img-fluid rounded-circle" alt="">
+            </div>
+            <h6 class="text-center font-weight-bold mt-2">Godson C. Jnr</h6>
+            <div class="rating mx-auto">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+          </div>
+          
+        </div>
+      </div>
     </section>
   </main>
   <section>
