Pricing section coming up soon

--- a/index.html
+++ b/index.html
@@ -273,6 +273,55 @@
         </div>
       </div>
     </section>
+
+    <section class="price-section py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12"><h2 class="text-center text-white font-weight-bold">Our Pricing</h2></div>
+          <div class="mx-auto mb-5 pt-2 pinky-border d-block"></div>
+          <div class="w-100 d-block"></div>
+
+          <div class="col-md-4 py-4 bg-white mb-lg-0 mb-md-0">
+            <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
+              <i class="material-icons material-icons-md-36 font-weight-bold">business</i>
+            </div>
+
+            <div class="row mx-auto d-flex justify-content-center">
+              <h6 class="h6reponsive font-weight-bold tick-blue-text">Property Management</h6>
+              <p class="tick-blue-text text-center">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora hic suscipit illum maxime voluptatum facilis.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-4 py-4 default-bg-color mb-lg-0 mb-md-0">
+            <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
+              <i class="material-icons material-icons-md-36 font-weight-bold">search</i>
+            </div>
+
+            <div class="row mx-auto d-flex justify-content-center">
+              <h6 class="h6reponsive font-weight-bold text-white">Strategic Planning</h6>
+              <p class="text-white text-center">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora hic suscipit illum maxime voluptatum facilis.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-4 py-4 bg-white mb-lg-0 mb-md-0 mb-sm-4">
+            <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
+              <i class="material-icons material-icons-md-36 font-weight-bold">pie_chart</i>
+            </div>
+
+            <div class="row mx-auto d-flex justify-content-center">
+              <h6 class="h6reponsive font-weight-bold tick-blue-text">Investment Planning</h6>
+              <p class="tick-blue-text text-center">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora hic suscipit illum maxime voluptatum facilis.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <section>
     <main>
