--- a/index.html
+++ b/index.html
@@ -281,12 +281,16 @@
           <div class="mx-auto mb-5 pt-2 pinky-border d-block"></div>
           <div class="w-100 d-block"></div>
 
-          <div class="col-md-4 py-4 bg-white mb-lg-0 mb-md-0">
-            <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
-              <i class="material-icons material-icons-md-36 font-weight-bold">business</i>
+          <div class="col-md-4 py-4 bg-white mb-3">
+            <div class="row mx-auto mb-2 pinky-text d-flex justify-content-center">
+              <h6 class="font-weight-bold tick-blue-text mb-0">Starter Plan</h6>
+              <div class="w-100"></div>
+              <h3 class="pinky-text font-weight-bold mt-0"><sup class="font-weight-normal">$</sup>35<sub class="text-muted font-weight-normal">/monthly</sub></h3>
+              <div class="w-100"></div>
+              <hr class="pinky-border2">
             </div>
 
-            <div class="row mx-auto d-flex justify-content-center">
+            <div class="row mx-auto mt-0 d-flex justify-content-center">
               <h6 class="h6reponsive font-weight-bold tick-blue-text">Property Management</h6>
               <p class="tick-blue-text text-center">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora hic suscipit illum maxime voluptatum facilis.
@@ -294,7 +298,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 py-4 default-bg-color mb-lg-0 mb-md-0">
+          <div class="col-md-4 py-4 default-bg-color mb-3">
             <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
               <i class="material-icons material-icons-md-36 font-weight-bold">search</i>
             </div>
@@ -307,7 +311,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 py-4 bg-white mb-lg-0 mb-md-0 mb-sm-4">
+          <div class="col-md-4 py-4 bg-white mb-3">
             <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
               <i class="material-icons material-icons-md-36 font-weight-bold">pie_chart</i>
             </div>
