--- a/index.html
+++ b/index.html
@@ -362,7 +362,13 @@
     </section>
 
     <section class="news-section py-5">
-      
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-4 py-5 bg-danger"></div>
+          <div class="col-md-6 col-lg-4 py-5 bg-secondary"></div>
+          <div class="col-md-6 col-lg-4 py-5 bg-success"></div>
+        </div>
+      </div>
     </section>
   </main>
   <section>
