--- a/index.html
+++ b/index.html
@@ -364,9 +364,69 @@
     <section class="news-section py-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4 py-5 bg-danger"></div>
-          <div class="col-md-6 col-lg-4 py-5 bg-secondary"></div>
-          <div class="col-md-6 col-lg-4 py-5 bg-success"></div>
+          <div class="col-md-6 col-lg-4">
+            <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
+              <img src="images/28166585_1821180634600940_1020049624458377498_n.jpg" class="img-fluid" alt="Man with backpack"    
+                  class="d-block w-100">
+              <div class="px-2 py-2">
+                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
+                  Travel
+                </p>
+                <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                  Planning your final summer trip
+                </h1>
+
+                <p class="mb-1">
+                  Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
+                </p>
+              </div>
+              <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+                Read More
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
+              <img src="images/28166585_1821180634600940_1020049624458377498_n.jpg" class="img-fluid" alt="Man with backpack"    
+                  class="d-block w-100">
+              <div class="px-2 py-2">
+                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
+                  Travel
+                </p>
+                <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                  Planning your final summer trip
+                </h1>
+
+                <p class="mb-1">
+                  Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
+                </p>
+              </div>
+              <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+                Read More
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
+              <img src="images/28166585_1821180634600940_1020049624458377498_n.jpg" class="img-fluid" alt="Man with backpack"    
+                  class="d-block w-100">
+              <div class="px-2 py-2">
+                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
+                  Travel
+                </p>
+                <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                  Planning your final summer trip
+                </h1>
+
+                <p class="mb-1">
+                  Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
+                </p>
+              </div>
+              <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+                Read More
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
