Working on the animation

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <header>
     <!-- Mini Navigation bar -->
     <div class="container-fluid default-bg-color">
-      <div class="container">
+      <div class="container wow zoomIn">
         <div class="row">
           <div class="col-md-8 text-center">
             <div class="row">
@@ -102,7 +102,7 @@
     <!-- Main Navigation bar -->
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar py-3">
-      <div class="container">
+      <div class="container wow zoomIn slow">
         
         <!-- Navbar brand -->
         <a class="navbar-brand tick-blue-text title2 font-weight-bold" href="#">Consuloan</a>
@@ -158,14 +158,14 @@
     <div class="view intro-2" style="background: url('images/1-3.jpg')no-repeat center center; background-size: cover;">
       <div class="full-bg-img">
         <div class="mask rgba-indigo-slight flex-center">
-          <div class="container black-text wow fadeInUp">
+          <div class="container black-text">
             <div class="col-md-8">
-              <h1 class="font-weight-bold tick-blue-text text-uppercase">Save <span class="pinky-text">time</span></h1>
-              <h1 class="font-weight-bold tick-blue-text text-uppercase">Save <span class="pinky-text">Money</span></h1>
-              <h1 class="font-weight-bold  text-uppercase"><span class="pinky-text">Grow &amp; Success</span></h1>
+              <h1 class="font-weight-bold wow fadeInUp slow tick-blue-text text-uppercase">Save <span class="pinky-text">time</span></h1>
+              <h1 class="font-weight-bold wow fadeInUp slow tick-blue-text text-uppercase">Save <span class="pinky-text">Money</span></h1>
+              <h1 class="font-weight-bold wow fadeInUp slow  text-uppercase"><span class="pinky-text">Grow &amp; Success</span></h1>
               <br>
-                <button type="button" class="btn mr-3 rounded-0 pinky-button">Our Company</button>
-                <button type="button" class="btn rounded-0 default-bg-color">Our Services</button>
+                <button type="button" class="btn wow fadeInUpBig  mr-3 rounded-0 pinky-button">Our Company</button>
+                <button type="button" class="btn wow fadeInUpBig  rounded-0 default-bg-color">Our Services</button>
               </a>
             </div>  
           </div>
@@ -199,11 +199,13 @@
     <section class="industry-section py-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-12"><h2 class="text-center text-white font-weight-bold">Our Industry</h2></div>
-          <div class="mx-auto mb-5 pt-2 pinky-border d-block"></div>
+          <div class="col-md-12 wow fadeInUp slower">
+            <h2 class="text-center text-white font-weight-bold">Our Industry</h2>
+          </div>
+          <div class="mx-auto wow fadeInLeft mb-5 pt-2 pinky-border d-block"></div>
           <div class="w-100 d-block"></div>
 
-          <div class="col-md-4 py-4 bg-white mb-lg-0 mb-md-0">
+          <div class="col-md-4 py-4 bg-white mb-lg-0 mb-md-0 wow fadeInUp slow">
             <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
               <i class="material-icons material-icons-md-36 font-weight-bold">business</i>
             </div>
@@ -216,7 +218,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 py-4 default-bg-color mb-lg-0 mb-md-0">
+          <div class="col-md-4 py-4 default-bg-color mb-lg-0 wow fadeInUp slow mb-md-0">
             <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
               <i class="material-icons material-icons-md-36 font-weight-bold">search</i>
             </div>
@@ -229,7 +231,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 py-4 bg-white mb-lg-0 mb-md-0 mb-sm-4">
+          <div class="col-md-4 py-4 bg-white mb-lg-0 mb-md-0 wow fadeInUp slow mb-sm-4">
             <div class="row mx-auto mb-4 pinky-text d-flex justify-content-center">
               <i class="material-icons material-icons-md-36 font-weight-bold">pie_chart</i>
             </div>
@@ -248,25 +250,25 @@
     <section class="testimonail-section py-5">
       <div class="container">
         <div class="row">
-          <div class="mx-auto col-md-8 py-2 text-center">
+          <div class="mx-auto wow zoomIn col-md-8 py-2 text-center">
             <i class="fa fa-quote-left fa-3x pinky-text"></i>
           </div>
           <div class="w-100"></div>
           <div class="mx-auto col-md-8 text-center">
-            <h3 class="h3-responsive tick-blue-text font-weight-bold">2000<sup>+</sup> Happy Clients</h3>
-            <p class="testimonail">
+            <h3 class="h3-responsive wow fadeInUp slow tick-blue-text font-weight-bold">2000<sup>+</sup> Happy Clients</h3>
+            <p class="testimonail wow zoomIn">
               "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto nihil iste, ad officiis! Modi accusamus voluptatibus aperiam dolores nam pariatur nulla sint atque ullam illo voluptatum nemo, repellendus perferendis tempora ipsum iure harum perspiciatis id quaerat? Exercitationem itaque facere harum libero deleniti distinctio consequuntur molestiae necessitatibus, animi quidem blanditiis sequi labore accusamus magnam facilis consequatur"
             </p>
-            <div class="avatar mx-auto">
+            <div class="avatar wow fadeInUp mx-auto">
               <img src="images/28166585_1821180634600940_1020049624458377498_n.jpg" class="img-fluid rounded-circle" alt="">
             </div>
             <h6 class="text-center font-weight-bold mt-2">Godson C. Jnr</h6>
             <div class="rating mx-auto">
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
+              <i class="fa fa-star wow fadeInLeft delay-1s"></i>
+              <i class="fa fa-star wow fadeInLeft slower"></i>
+              <i class="fa fa-star wow fadeInLeft slow"></i>
+              <i class="fa fa-star wow fadeInLeft faster"></i>
+              <i class="fa fa-star wow fadeInLeft fast"></i>
             </div>
           </div>
           
@@ -277,7 +279,9 @@
     <section class="price-section py-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-12"><h2 class="text-center text-white font-weight-bold">Our Pricing</h2></div>
+          <div class="col-md-12 wow fadeInUp slow">
+            <h2 class="text-center text-white font-weight-bold">Our Pricing</h2>
+          </div>
           <div class="mx-auto mb-5 pt-2 pinky-border d-block"></div>
           <div class="w-100 d-block"></div>
 
@@ -363,68 +367,77 @@
 
     <section class="news-section py-5">
       <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
-              <img src="images/28166585_1821180634600940_1020049624458377498_n.jpg" class="img-fluid" alt="Man with backpack"    
-                  class="d-block w-100">
-              <div class="px-2 py-2">
-                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
-                  Travel
-                </p>
-                <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
-                  Planning your final summer trip
-                </h1>
-
-                <p class="mb-1">
-                  Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
-                </p>
-              </div>
-              <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-                Read More
-              </a>
+        <div class="row py-4">
+          <div class="row">
+            <div class="col-md-8 mx-auto py-4">
+              <h1 class="h1responsive mb-3 tick-blue-text text-center font-weight-bold">Latest News</h1>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
-              <img src="images/28166585_1821180634600940_1020049624458377498_n.jpg" class="img-fluid" alt="Man with backpack"    
-                  class="d-block w-100">
-              <div class="px-2 py-2">
-                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
-                  Travel
-                </p>
-                <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
-                  Planning your final summer trip
-                </h1>
+            <div class="row">
+              <div class="col-md-6 col-lg-4">
+                <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
+                  <img src="images/28166585_1821180634600940_1020049624458377498_n.jpg" class="img-fluid" alt="Man with backpack"    
+                      class="d-block w-100">
+                  <div class="px-2 py-2">
+                    <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
+                      Travel
+                    </p>
+                    <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                      Playing around
+                    </h1>
 
-                <p class="mb-1">
-                  Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
-                </p>
+                    <p class="mb-1">
+                      Summer is coming to a close just around the corner. But it's not too late to squeeze in &hellip;
+                    </p>
+                  </div>
+                  <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+                    Read More
+                  </a>
+                </div>
               </div>
-              <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-                Read More
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
-              <img src="images/28166585_1821180634600940_1020049624458377498_n.jpg" class="img-fluid" alt="Man with backpack"    
-                  class="d-block w-100">
-              <div class="px-2 py-2">
-                <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
-                  Travel
-                </p>
-                <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
-                  Planning your final summer trip
-                </h1>
 
-                <p class="mb-1">
-                  Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
-                </p>
+              <div class="col-md-6 col-lg-4">
+                <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
+                  <img src="images/Meeting.jpg" class="img-fluid" alt="Man with backpack"    
+                      class="d-block w-100">
+                  <div class="px-2 py-2">
+                    <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
+                      Travel
+                    </p>
+                    <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                      Planning your final summer trip
+                    </h1>
+
+                    <p class="mb-1">
+                      Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
+                    </p>
+                  </div>
+                  <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+                    Read More
+                  </a>
+                </div>
               </div>
-              <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
-                Read More
-              </a>
+
+              <div class="col-md-6 col-lg-4">
+                <div class="mb-2 mx-auto p-relative bg-white shadow-1 blue-hover" style="width: 360px; overflow: hidden; border-radius: 1px;">
+                  <img src="images/edited/DSC_0607.JPG" class="img-fluid" alt="Man with backpack"    
+                      class="d-block w-100">
+                  <div class="px-2 py-2">
+                    <p class="mb-0 small font-weight-medium text-uppercase mb-1 text-muted lts-2px">
+                      Travel
+                    </p>
+                    <h1 class="ff-serif font-weight-normal text-black card-heading mt-0 mb-1" style="line-height: 1.25;">
+                      Planning your final summer trip
+                    </h1>
+
+                    <p class="mb-1">
+                      Summer is coming to a close just around the corner. But it's not too late to squeeze in another weekend trip &hellip;
+                    </p>
+                  </div>
+                  <a href="#0" class="text-uppercase d-inline-block font-weight-medium lts-2px ml-2 mb-2 text-center styled-link">
+                    Read More
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
